# apriltag

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  test.py
.github/workflows/: ci.yml
apriltag/: CMakeLists.txt
apriltag_pybind/: CMakeLists.txt  Makefile  apriltag  apriltag_pybind.cc
include/AprilTags/: TagDetector.h
python/: CMakeLists.txt  apriltag_pybind.cc
src/: TagDetector.cc
