CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(apriltags)

SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(include ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
FILE(GLOB CC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${CC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBRARIES})

INSTALL(
  TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

INSTALL (
  DIRECTORY ${CMAKE_SOURCE_DIR}/include/
  DESTINATION include
  FILES_MATCHING PATTERN "*.h*"
)
