CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(apriltag)

# Settings
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(PYTHON_LIBRARY_DIR "/usr/local/lib/python3.6/dist-packages")

# Dependencies
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_SUBDIRECTORY(third_party/pybind11)
INCLUDE_DIRECTORIES(include ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
SET(DEPS ${OpenCV_LIBS} ${PROJECT_NAME})

# AprilTag
FILE(GLOB CC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${CC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBRARIES})
INSTALL(
  TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)
INSTALL (
  DIRECTORY ${CMAKE_SOURCE_DIR}/include/
  DESTINATION include
  FILES_MATCHING PATTERN "*.h*"
)

# Python binding
PYBIND11_ADD_MODULE(${PROJECT_NAME}_pybind MODULE python/apriltag_pybind.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_pybind PRIVATE ${DEPS})
INSTALL(
  TARGETS ${PROJECT_NAME}_pybind
  COMPONENT python
  LIBRARY DESTINATION "${PYTHON_LIBRARY_DIR}"
)
