CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(apriltag_pybind)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
ADD_SUBDIRECTORY(pybind11)

SET(DEPS ${OpenCV_LIBS} apriltag)
INCLUDE_DIRECTORIES(apriltag/include ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})

PYBIND11_ADD_MODULE(${PROJECT_NAME} MODULE apriltag_pybind.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${DEPS})

SET(PYTHON_LIBRARY_DIR "/usr/local/lib/python3.6/dist-packages")
INSTALL(
  TARGETS ${PROJECT_NAME}
  COMPONENT python
  LIBRARY DESTINATION "${PYTHON_LIBRARY_DIR}"
)
